--- a/templates/home.html
+++ b/templates/home.html
@@ -4,20 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Spooky Cars 4 You</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Creepster';font-size: 22px;
+}
+</style>
+</head>
+<body>
   </head>
  
-  
+ 
 <html lang="en">
     <style>
         *{
             margin: 0;
             padding: 0;
-            
+           
         }
         body{
             height: 200vh;
-            
+           
         }
         body {
               background-image: url('static/background.jpg');
@@ -57,7 +64,7 @@
              align-content: center;
             list-style: none;
             left: -135px;
-            
+           
          }
         .biao li{
              position: relative;
@@ -70,9 +77,9 @@
              font-weight: bold;
              color: rgb(28, 36, 148);
              text-decoration: none;
-
+ 
          }
-          
+         
         .bian{
             padding: 15px 100px;
             background-color: rgb(71, 105, 219);
@@ -97,7 +104,7 @@
     }
     html, body
       {
-        font-family:arial,helvetica,sans-serif;
+        font-family: Creepster 400;
         height:100%;
         color: #ffffff;
         background:url('/static/bg.png');
@@ -113,21 +120,21 @@
       text-align:center;
       font-size:12px;
     }
-
+ 
     div.planclose table
     {
       width:75%;
       margin-left:auto;
       margin-right:auto;
     }
-
+ 
     div.planclose td
     {
       background-color:#000000;
       text-align:center;
       padding:5px;
     }
-
+ 
     div.plantxt
     {
       width:220px;
@@ -140,44 +147,30 @@
       font-size:15px;
       font-family:'Creepster';
     }
-
-    div.plantxt a h3
-    {
-      background-color:#947B14;
-      color:#ffffff;
-      text-decoration:none;
-      text-align: center;
-    } 
-
-    div.plantxt a:hover h3:hover
-    {
-      background-color:#00002c;
-      color:#ffffff;
-      text-decoration:none;
-    }
+ 
     .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #000000;
 }
-
+ 
 .navbar a {
   float: left;
   display: block;
-  color: white;
+  color: #FF8500;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
 }
-
+ 
 .navbar a.right {
   float: right;
 }
-
+ 
 .navbar a:hover {
-  background-color: #ddd;
+  background-color: #FF8500;
   color: black;
 }
-    
+   
     </style>
 <body>
     <!-- background image-->
@@ -185,16 +178,16 @@
     <div class  = "navbar" >
       <nav>
         <ul>
-           <center><li><a href="#">Cars 4 Sale</a></li></center> 
+           <center><li><a href="#">Cars 4 Sale</a></li></center>
         </ul>
     </nav>
-
+ 
     </div>
-  
+ 
     <script>
         window.addEventListener('scroll',function(){
             let tou = document.querySelector('.tou');
-            
+           
            
            /*  tou.classList.toggle("bian",window.scrollY>0); */
            if(window.scrollY>0)
@@ -208,25 +201,32 @@
     <br>
     <br>
     <div class="main">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, </h5>
+      <center><h2>The Devils Sidewalk</h2></center>
+      <center><h5>Origins: Unknown </h5><center>
       <center><img src="static/car1.jpg" /></center>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>Posted by User "Lucy-firr" </p>
+      <p>Cost: $666<p>
+      </p>Contact Info: Arrive at the nearest cemetary at exactly 3:33. Stomp on the ground 6 times in intervals of three.</p>
+      </p>*Sellar is known to have a second contract on hand- does not cost an arm and a leg, but a soul.</p>
       <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, </h5>
+      <center><h2>The Sports Spider</h2></center>
+      <center><h5>Drove itself to my house, send help</h5></center>
       <center><img src="static/car2.jpg" /></center>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>Posted by User "Ded Vil"</p>
+      </p>Cost: Your Life</p>
+      <p>Contact Info: call 666-666-6666 </p>
       <br>
-      <<h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, </h5>
+      <center><h2>The Pumpkin Publish</h2></center>
+      <center><h5>put something here idk yet </h5></center>
       <center><img src="static/car3.jpg" /></center>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>Posted by User "S8-10" </p>
+      </p>Cost: ALL the Candy Ever.</p>
+      </p>Contact Info: summon your local demon  </p>
+      </p></p>
       <br>
     </div>
-
+ 
   </body>
 </html>
+ 
+
